--- a/index.html
+++ b/index.html
@@ -30,6 +30,37 @@
       <button type="button" class="main-btn">Reservation</button>
     </div>
   </header>
+  <!-- End of Header -->
+
+  <!-- About us -->
+  <section class="about-us">
+    <div class="about-us-left">
+      <img src="./images/about-us-img.png" alt="">
+    </div>
+
+    <div class="about-us-right">
+      <h1 class="main-heading">About Us</h1>
+      <h3 class="sub-heading">Introduce To Australian Dishes</h3>
+      <div class="stars">
+        <i class="fas fa-star-of-life star"></i>
+        <i class="fas fa-star-of-life star"></i>
+        <i class="fas fa-star-of-life star"></i>
+      </div>
+      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quibusdam blanditiis
+        alias. Minima at blanditiis odit neque consequatur quos perspiciatis, quo quae labore non dicta molestiae quas
+        consequuntur pariatur rem ipsam rerum! Incidunt ullam tempora consequatur omnis magni quasi ab quidem atque!
+        Voluptatem voluptate saepe asperiores quasi? Ut, sed. Et!</p>
+
+      <div class="stars">
+        <i class="fas fa-star-of-life star"></i>
+        <i class="fas fa-star-of-life star"></i>
+        <i class="fas fa-star-of-life star"></i>
+      </div>
+      <button type="button" class="main-btn">Read More</button>
+
+    </div>
+  </section>
+  <!-- End of About us -->
 </body>
 
 </html>
