scss on image overlay and hover

--- a/index.html
+++ b/index.html
@@ -61,6 +61,61 @@
     </div>
   </section>
   <!-- End of About us -->
+
+  <!-- Gallery -->
+  <section class="gallery">
+    <div class="cards-wrapper">
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Food Name</h1>
+          <p class="card-overlay-paragraph">Price: $30.00</p>
+          <button type="button" class="card-overlay-btn">Order Now</button>
+        </div>
+        <img src="./images/gallery-img-1.jpeg" alt="" class="card-image">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Food Name</h1>
+          <p class="card-overlay-paragraph">Price: $30.00</p>
+          <button type="button" class="card-overlay-btn">Order Now</button>
+        </div>
+        <img src="./images/gallery-img-2.jpeg" alt="" class="card-image">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Food Name</h1>
+          <p class="card-overlay-paragraph">Price: $30.00</p>
+          <button type="button" class="card-overlay-btn">Order Now</button>
+        </div>
+        <img src="./images/gallery-img-3.jpeg" alt="" class="card-image">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Food Name</h1>
+          <p class="card-overlay-paragraph">Price: $30.00</p>
+          <button type="button" class="card-overlay-btn">Order Now</button>
+        </div>
+        <img src="./images/gallery-img-4.jpeg" alt="" class="card-image">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Food Name</h1>
+          <p class="card-overlay-paragraph">Price: $30.00</p>
+          <button type="button" class="card-overlay-btn">Order Now</button>
+        </div>
+        <img src="./images/gallery-img-5.jpeg" alt="" class="card-image">
+      </div>
+      <div class="card">
+        <div class="card-overlay">
+          <h1 class="card-overlay-heading">Food Name</h1>
+          <p class="card-overlay-paragraph">Price: $30.00</p>
+          <button type="button" class="card-overlay-btn">Order Now</button>
+        </div>
+        <img src="./images/gallery-img-6.jpeg" alt="" class="card-image">
+      </div>
+    </div>
+  </section>
+  <!-- End Of Gallery -->
 </body>
 
 </html>
