--- a/index.html
+++ b/index.html
@@ -116,6 +116,33 @@
     </div>
   </section>
   <!-- End Of Gallery -->
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-header">
+      <a href="#" class="logo"><i class="fas fa-utensils"></i></a>
+      <div>
+        <h1 class="main-name">Australia</h1>
+        <p class="sub-name">Resturant</p>
+      </div>
+    </div>
+
+    <div class="footer-social-media">
+      <ul class="social-media">
+        <li class="social-media-item"><a href="" class="social-media-link"><i class="fab fa-facebook-square"></i></a>
+        </li>
+        <li class="social-media-item"><a href="" class="social-media-link"><i class="fab fa-instagram"></i></a>
+        </li>
+        <li class="social-media-item"><a href="" class="social-media-link"><i class="fab fa-google-plus-square"></i></a>
+        </li>
+        <li class="social-media-item"><a href="" class="social-media-link"><i class="fab fa-youtube"></i></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+
+  <!-- End of Footer -->
 </body>
 
 </html>
