scss for footer

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
         </li>
       </ul>
     </div>
+
+    <div class="footer-copyright">
+      <p class="footer-copyright-paragraph">
+        &copy; Copyright. Resturant "Australia". All Rights Reserved
+      </p>
+    </div>
   </footer>
 
 
