--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <input type="checkbox" class="checkbox" id="check">
+    <input type="checkbox" id="check" class="checkbox" hidden>
     <div class="hamburger-menu">
       <label for="check" class="menu">
         <div class="menu-line menu-line-1"></div>
